# home-assistant-enovates

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  validate.yml
config/: configuration.yaml
custom_components/enovates/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  helpers.py  icons.json  manifest.json  notes.txt  number.py  quality_scale.yaml  sensor.py
custom_components/enovates/translations/: en.json
scripts/: prek_requirements_check.py
src/enovates_modbus/: modbusenoone.py
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_number.py  test_sensor.py
